# frc_tabletop_2020_infinite_recharge

./: README.md
cpp/SDL Tutorial 1/: CApp.h  CApp_OnInit.cpp  CApp_OnRender.cpp
cpp/ex1/sdltest/: Makefile  makefile.deps
cpp/ex2/: main_move_sprite.cc  move_sprite
cpp/ex2/sdlmove/: Makefile  makefile  makefile.deps  sdlmove.cpp
cpp/examples/SDL Tutorial 1/: SDL Tutorial 1.depend
cpp/examples/ex0/: example0  main_example0.cc  makefile  makefile.deps
cpp/examples/ex2/: makefile  makefile.deps
cpp/tank_game/: CMakeLists.txt  main_move_sprite.cpp  makefile  makefile.deps  move_sprite
python/frc_tabletop/: colors.py  hab_platform_level_0.py  loader_utils.py  main.py  robot.py  robot_chassis.py  units.py
python/frc_tabletop_2020/: .dir-locals.el  control_panel.py  field.py  keymaps.py  loading_bay.py  main.py  power_port.py  robot.py  shield_generator.py  sprite_rect.py  trench_run.py  truss.py
python/punch_the_chimp/ruby/: chimp.rb
python/pygame_examples/: move_sprite_keyboard_jump.py  moving_sprites_bounce.py
python/tank_game/: cargo_ship.py  colors.py  depot.py  hab_platform_level_0.py  hab_platform_level_1.py  hab_platform_level_2.py  hab_platform_level_3.py  loading_station.py  main.py  player.py  robot.py  robot_chassis.py  robot_frame.py  rocket.py  units.py  wall.py
src/: control_panel.py  loader_utils.py  main.py  robot.py  robot_chassis.py  rotated_rect.py  rotation_utils.py  shield_generator.py  sprite_rect.py  units.py
src/data/: full_cargo.xcf
src/deprecated/: cargo_ship.py  depot.py  hab_platform_level_2.py
src/resources/: truss.xcf
(+23 files in other folders)
